media/overseerr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
spec:
  serviceName: overseerr
  selector:
    matchLabels:
      app: overseerr
  replicas: 1
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.33.2
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: overseerr-data
